# libhund

./: .gitignore  CMakeLists.txt  Makefile  README.md  b1_ss.mtx  compile_commands.json  context.h  hund_computation.h  hypergraph.h  hypergraph_bisection.h  initialize_mt_kahypar.h  kahypar_computation.h  logger.h  runhund  runhund.cpp  test.cpp  todo.md  todo.txt  types.h  util.h
deploy/: example_submit.sh
examples/: paper_example.mtx  raefsky6.mtx
src/: bisector.h  hund_cli.cpp  hund_computation.h  hypergraph.h  hypergraph_bisection.h  initialize_mt_kahypar.h  kahypar_computation.h  logger.h  runhund.cpp  types.h  util.h
test/: build_test.sh  run_test.sh  test.cpp
tools/: plot_bisection_test_different_imbalances.py  plot_bisection_test_spread.py  visualize.py
